Bug 406351 - KDE info center show incorrect info about memory for 32 bit system
Summary: KDE info center show incorrect info about memory for 32 bit system
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: Memory (other bugs)
Version First Reported In: 5.15.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2019-04-09 09:09 UTC by opensuse.lietuviu.kalba
Modified: 2019-04-29 22:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2019-04-09 09:09:09 UTC
SUMMARY

KDE info center 5.15.4 shows that I have only 3.7 GiB, but my computer have almost 16 GiB


STEPS TO REPRODUCE
1. In computer with more than 4 GiB RAM install openSUSE Tumbleweed Linux 32 bit system 
2. Install kernel-pae
3. Boot with /boot/vmlinuz-*-pae kernel and /boot/initrd-*-pae initrd
4. Open KDE info center

OBSERVED RESULT
KDE info center 5.15.4 shows that computer has only 3.7 GiB RAM
See https://bugzilla.opensuse.org/attachment.cgi?id=802356 image

EXPECTED RESULT
KDE info center 5.15.4 shows that computer has about 15.7 GiB RAM

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20190403
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Kernel Version: 5.0.5-1-pae
OS Type: 32-bit

ADDITIONAL INFORMATION
KSysGuard shows info correctly.
K Info center in memory tab shows info about RAM correctly,
see https://bugzilla.opensuse.org/attachment.cgi?id=802419 image
Comment 1 Christoph Feck 2019-04-09 16:46:07 UTC
Needs to use 64-bit multiplication even on 32-bit systems in https://cgit.kde.org/kinfocenter.git/tree/Modules/about-distro/src/Module.cpp#n59

A cast for one of the operands should help.
Comment 2 Christoph Feck 2019-04-29 22:55:53 UTC
Git commit 10d60170eaa46c3e4233c4eef966418d0065754d by Christoph Feck.
Committed on 29/04/2019 at 22:55.
Pushed by cfeck into branch 'master'.

Correctly show memory sizes > 4 GiB on 32 bit Linux
FIXED-IN: 5.16.0

Differential Revision: https://phabricator.kde.org/D20828

M  +1    -1    Modules/about-distro/src/Module.cpp

https://commits.kde.org/kinfocenter/10d60170eaa46c3e4233c4eef966418d0065754d