Correctly show memory sizes > 4 GiB on 32 bit Linux

BUG: 406351
FIXED-IN: 5.16.0

Differential Revision: https://phabricator.kde.org/D20828